--- a/trunk/Jchatting/.classpath
+++ b/trunk/Jchatting/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/c3p0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jtds"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dom4j1.6.1"/>
+	<classpathentry kind="lib" path="lib/c3p0-0.9.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/jtds-1.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
